--- a/src/template.html
+++ b/src/template.html
@@ -17,17 +17,38 @@
                 <div class="wrapper">
                     <h2>Projects</h2>
                     <div id="projects-wrapper">
-                        <h3>+ Add new project</h3>
+                        
+                        <div id="indiv-proj-wrapper">
+                            <h3>Project #1</h3>
+                        </div>
+                        <div id="indiv-proj-wrapper">
+                            <h3>Project #1</h3>
+                        </div>
+                        
+                        <button type="button" id="add-new-btn">
+                            <h3>+ Add new project</h3>
+                        </button>
                     </div>
                 </div>
                 <div class="wrapper">
-                    <h2>Calendar</h2>
+                    <h2>Calendar View</h2>
                 </div>
             </div>
             <div id="display-section">
                 <div>
                     <h1>My Project</h1>
-                    <div>
+                    <div id="todo-wrapper">
+                        <div class="todo-box">
+                            <div class="check-box">
+                                <img src="./assets/svg/check-blank.svg" alt="">
+                            </div>
+                            <p>Example text</p>
+                            <div class="todo-actions">
+                                <img src="./assets/svg/important.svg" alt="">
+                                <img src="./assets/svg/edit.svg" alt="">
+                                <img src="./assets/svg/delete.svg" alt="">
+                            </div>
+                        </div>
                         <div class="todo-box">
                             <p>Example text</p>
                         </div>
