add function to remove todo boxes
 - from DOM and from arrays
 - also included a method to "link" DOM obj with array data

--- a/planning/planning.html
+++ b/planning/planning.html
@@ -46,7 +46,7 @@
                             <div class="todo-actions">
                                 <img src="./assets/svg/important.svg" alt="">
                                 <img src="./assets/svg/edit.svg" alt="">
-                                <img src="./assets/svg/delete.svg" alt="">
+                                <img src="./assets/svg/delete.svg" alt="" data-delete>
                             </div>
                         </div>
                         <div class="todo-box">
