add function to validate form inputs

--- a/src/template.html
+++ b/src/template.html
@@ -29,6 +29,7 @@
                 </div>
                 <div class="wrapper">
                     <h2>Calendar View</h2>
+                    <h6>(WIP)</h6>
                 </div>
             </div>
             <div id="display-section">
