--- a/src/template.html
+++ b/src/template.html
@@ -48,12 +48,12 @@
     <dialog id="todo-modal">
             <div class="modal-wrapper">
                 <form id="toDoDetails">
-                    <label for="title">Title</label><input required type="text" id="title" name="title">
+                    <label for="title">Title</label><input type="text" id="title" name="title">
                     <label for="dueDate">Due Date</label><input type="date" id="dueDate" name="dueDate">
+                    <label for="description">Description</label><textarea name="description" id="description" cols="30" rows="10" placeholder="A brief description of your task..."></textarea>
                     <div>
                         <input type="checkbox" id="priority" name="priority"><label for="priority">Mark as Important</label>
                     </div>
-                    <label for="description">Description</label><textarea name="description" id="description" cols="30" rows="10"></textarea>
                 </form>
                 <button type="button" id="todoModalBtn">Submit</button>
             </div>
