add dist folder contents

--- a/planning/planning.html
+++ b/planning/planning.html
@@ -39,14 +39,21 @@
                     <h1>My Project</h1>
                     <div id="todo-wrapper">
                         <div class="todo-box">
-                            <div class="check-box">
-                                <img src="./assets/svg/check-blank.svg" alt="">
+                            
+                            <div class="another-wrapper">
+                                <div class="check-box">
+                                    <img src="./assets/svg/check-blank.svg" alt="">
+                                </div>
+                                <p>Example text</p>
+                                <div class="todo-actions">
+                                    <img src="./assets/svg/important.svg" alt="">
+                                    <img src="./assets/svg/edit.svg" alt="">
+                                    <img src="./assets/svg/delete.svg" alt="" data-delete>
+                                </div>
                             </div>
-                            <p>Example text</p>
-                            <div class="todo-actions">
-                                <img src="./assets/svg/important.svg" alt="">
-                                <img src="./assets/svg/edit.svg" alt="">
-                                <img src="./assets/svg/delete.svg" alt="" data-delete>
+
+                            <div class="expanding-wrapper">
+                                
                             </div>
                         </div>
                         <div class="todo-box">
